# auto-commit-rs

./: .chunkhound.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.chunkhound/: db
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
data/conventions/: CONVENTIONAL_COMMIT.md  GITMOJI.md
scripts/: install.ps1  install.sh
src/: cache.rs  cli.rs  config.rs  git.rs  interpolation.rs  lib.rs  main.rs  preset.rs  prompt.rs  provider.rs  ui.rs  update.rs
tests/: cache_tests.rs  cli_tests.rs  config_tests.rs  git_tests.rs  interpolation_tests.rs  preset_file_tests.rs  prompt_tests.rs  provider_tests.rs  update_tests.rs
tests/common/: mod.rs
