[package]
name = "auto-commit-rs"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI tool that generates git commit messages via LLMs"
license = "MIT"

[[bin]]
name = "cgen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "6"
dotenvy = "0.15"
indicatif = "0.17"
inquire = "0.7"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
