[package]
name = "auto-commit-rs"
version = "1.0.0"
edition = "2021"
description = "Fast, lightweight CLI tool that generates git commit messages using LLMs. Single binary, no runtime dependencies."
license = "MIT"
repository = "https://github.com/gtkacz/auto-commit-rs"
homepage = "https://github.com/gtkacz/auto-commit-rs"
documentation = "https://github.com/gtkacz/auto-commit-rs"
readme = "README.md"
keywords = ["git", "commit", "llm", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Gabriel Tkacz <gabriel@tkacz.dev>"]

[[bin]]
name = "cgen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "6"
dotenvy = "0.15"
indicatif = "0.17"
inquire = "0.7"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
mockito = "1"
serial_test = "3"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
